# c2rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  node.rs  serializer.rs  visitor.rs
crates/ast/tests/: basic.rs  integration_test.rs
crates/codegen/: Cargo.toml
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/ir/: Cargo.toml
crates/ir/src/: basic_block.rs  function.rs  instruction.rs  lib.rs
crates/ir/tests/: basic.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/lexer/tests/: basic.rs  integration_test.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  grammar.rs  lib.rs  parser.rs
crates/parser/tests/: basic.rs  integration_test.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs  name_resolution.rs  symbol_table.rs  type_checker.rs
crates/semantic/tests/: basic.rs  integration_test.rs
crates/tests/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs  template.rs  trait_.rs  type_.rs
crates/types/tests/: basic.rs
crates/utils/: Cargo.toml
