[package]
name = "ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstract Syntax Tree for the C++ to Rust compiler - represents the parsed structure"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []
debug_ast = []
serialize = ["serde"]