[package]
name = "ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate Representation for the C++ to Rust compiler - optimized form for code generation"

[dependencies]
ast.workspace = true
types.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []
debug_ir = []
serialize = ["serde"]