[package]
name = "types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type system for the C++ to Rust compiler - manages type definitions and relationships"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []
debug_types = []
serialize = ["serde"]